--- a/expense-reimbursement-system/src/main/webapp/WEB-INF/web.xml
+++ b/expense-reimbursement-system/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,43 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<?xml version="1.0" encoding="UTF-8"?>
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+  <listener>
+    <listener-class>web.ContextListener</listener-class>
+  </listener>
+
+  <context-param>
+    <param-name>DatabaseName</param-name>
+    <param-value>ersdb</param-value>
+  </context-param>
+
+  <resource-ref>
+    <res-ref-name>jdbc/ersdb</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
+
+  <servlet>
+    <servlet-name>TestServlet</servlet-name>
+    <servlet-class>web.TestServlet</servlet-class>
+    <init-param>
+      <param-name>ServletName</param-name>
+      <param-value>Test Servlet</param-value>
+    </init-param>
+  </servlet>
+  <servlet>
+    <servlet-name>LoginServlet</servlet-name>
+    <servlet-class>web.LoginServlet</servlet-class>
+    <init-param>
+      <param-name>LoginServlet</param-name>
+      <param-value>Login Servlet</param-value>
+    </init-param>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>TestServlet</servlet-name>
+    <url-pattern>/test/*</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>LoginServlet</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
 </web-app>
