--- a/expense-reimbursement-system/src/main/webapp/WEB-INF/web.xml
+++ b/expense-reimbursement-system/src/main/webapp/WEB-INF/web.xml
@@ -7,37 +7,12 @@
 
   <context-param>
     <param-name>DatabaseName</param-name>
-    <param-value>ersdb</param-value>
+    <param-value>ersDB</param-value>
   </context-param>
 
   <resource-ref>
-    <res-ref-name>jdbc/ersdb</res-ref-name>
+    <res-ref-name>jdbc/ersDB</res-ref-name>
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
-
-  <servlet>
-    <servlet-name>TestServlet</servlet-name>
-    <servlet-class>web.TestServlet</servlet-class>
-    <init-param>
-      <param-name>ServletName</param-name>
-      <param-value>Test Servlet</param-value>
-    </init-param>
-  </servlet>
-  <servlet>
-    <servlet-name>LoginServlet</servlet-name>
-    <servlet-class>web.LoginServlet</servlet-class>
-    <init-param>
-      <param-name>LoginServlet</param-name>
-      <param-value>Login Servlet</param-value>
-    </init-param>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>TestServlet</servlet-name>
-    <url-pattern>/test/*</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>LoginServlet</servlet-name>
-    <url-pattern>/login</url-pattern>
-  </servlet-mapping>
 </web-app>
