Changed file structure in main, added com.nathanpaternoster packages, logging now logs to files correctly

--- a/expense-reimbursement-system/src/main/resources/log4j2.properties
+++ b/expense-reimbursement-system/src/main/resources/log4j2.properties
@@ -22,7 +22,7 @@ appender.rolling.policies.size.size=10MB
 appender.rolling.strategy.type = DefaultRolloverStrategy
 appender.rolling.strategy.max = 10
 
-logger.app.name = com.company
+logger.app.name = com.nathanpaternoster
 logger.app.level = debug
 logger.app.additivity = false
 logger.app.appenderRef.console.ref = LogToConsole
